examples/failing/ImportExplicit.purs
-- @shouldFailWith UnknownImport
module Main where

import M1 (X(..))
